--- a/Front/src/components/App/app.scss
+++ b/Front/src/components/App/app.scss
@@ -1,5 +1,8 @@
+@import 'src/styles/vars';
+
 #app {
   font-size: 1.2em;
   text-align: center;
-  margin: 1em;
-}
+  margin: auto;
+  max-width: 80%;
+ }
