--- a/Front/src/components/App/app.scss
+++ b/Front/src/components/App/app.scss
@@ -1,8 +1,5 @@
-@import 'src/styles/vars';
-
 #app {
   font-size: 1.2em;
   text-align: center;
-  margin: auto;
-  max-width: 80%;
- }
+  margin: 1em;
+}
