--- a/Front/src/components/Includes/footer.scss
+++ b/Front/src/components/Includes/footer.scss
@@ -1,14 +1,14 @@
 @import 'src/styles/vars';
 
-.footer{
+footer {
   background-color: $color2; 
   color: $color4;
 
-  &-top {
+  & .footer-top {
     display: flex;
     justify-content: space-between;
 
-    &-ul-right {
+    & .footer-ul-right {
       display : flex;
       padding : 0.2em;
       margin : 0em;
@@ -20,7 +20,7 @@
         padding :0.2em;
       }  
     }  
-    &-ul-left {
+    & .footer-ul-left {
       display : flex;
       padding : 0.2em;
       margin : 0em;
@@ -28,7 +28,7 @@
       align-items: flex-start;
       font-size: 0.8em;
       
-      &-li {
+      & .footer-li {
         padding :0.2em;
       }  
     }  
