--- a/Front/src/styles/_vars.scss
+++ b/Front/src/styles/_vars.scss
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+
 $color1:#ff732d;
 $color2:#2ab7ca;
 $color3:#e6e6ea;
 $color4:#f4f4f8;
 $color5:#ffc43d;
+
+h1 {
+font-size: 2em;
+font-weight: bolder;
+font-family: 'Indie Flower', cursive;
+padding : 1em 0 1em 0;
+}
+
 
