--- a/Front/src/components/App/app.scss
+++ b/Front/src/components/App/app.scss
@@ -2,4 +2,13 @@
 
 #app {
   font-size: 1em;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+ }
+
+ main {
+   flex: 1 1 auto;
+   padding: 20px;
  }
