--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -1,5 +1,5 @@
 .event {
-  margin: 2em;  
+
   &-resume {
     max-width : 60%;
   }
@@ -10,4 +10,12 @@
   &-cardAction {
   float: right;
   }
+}
+
+#events {
+  background-image: url("https://www.theatresparisiensassocies.com/user/img/1/710x0x1207-or.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 50px;
 }
