--- a/Front/src/components/NewsDetail/newsDetails.scss
+++ b/Front/src/components/NewsDetail/newsDetails.scss
@@ -1,11 +1,12 @@
 .newsDetail {
   max-width: 80%;
   margin: auto;
+  padding: 25px;
 
   
   
   &-content {
-  font-size: 1.3em;
+  font-size: 1em;
   line-height: 1.2em;
   }
 
