--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -13,9 +13,9 @@
 }
 
 #events {
-  background-image: url("https://www.theatresparisiensassocies.com/user/img/1/710x0x1207-or.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+  // background-image: url("https://www.theatresparisiensassocies.com/user/img/1/710x0x1207-or.jpg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center center;
   padding: 50px;
 }
