--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -12,6 +12,13 @@
   float: right;
   }
 }
+// img.MuiCardMedia-media {
+//   width: 15em;
+//   object-fit: cover;
+//   float: left;
+//   margin: 1em 1em;
+//   box-shadow: 1px 1px 10px 0px #00000054;
+// }
 
 #events {
   // background-image: url("https://www.theatresparisiensassocies.com/user/img/1/710x0x1207-or.jpg");
