--- a/Front/src/styles/index.scss
+++ b/Front/src/styles/index.scss
@@ -9,3 +9,14 @@ body {
 button {
   color: #ffffff !important;
 }
+
+.progress {
+  display: block;
+  height: 150px;
+  margin: 0 auto;
+}
+
+.center {
+  text-align: center;
+  margin: 0 auto;
+}
