--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/vars';
+
 .event {
   margin: 25px 0;
   
@@ -10,8 +12,7 @@
   }
   &-cardAction {
   float: right;
-  }
-  
+  }  
 }
 
 
