--- a/Front/src/styles/_vars.scss
+++ b/Front/src/styles/_vars.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800&display=swap');
 
 $color1:#ff732d;
 $color2:#2ab7ca;
