--- a/Front/src/components/Includes/header.scss
+++ b/Front/src/components/Includes/header.scss
@@ -1,4 +1,4 @@
-header {
+.header-top {
   width: 100%;
   background-image: url('https://static.isodev.ovh/img/board2.png');
   background-size: cover;
