--- a/Front/src/utils/Carousel/slider.scss
+++ b/Front/src/utils/Carousel/slider.scss
@@ -1,38 +1,3 @@
-.aws-sld {
-
-  --slider-height-percentage: 30%;
-  --slider-transition-duration: 600ms;
-  --organic-arrow-thickness: 5px;
-  --organic-arrow-border-radius: 0px;
-  --organic-arrow-height: 21px;
-  --organic-arrow-color: #26456f;
-  --control-button-width: 5%;
-  --control-button-height: 25%;
-  --control-button-background: transparent;
-  --control-bullet-color: #2d5182;
-  --control-bullet-active-color: #26456f;
-  --loader-bar-color: #851515;
-  --loader-bar-height: 4px;
-  padding: 0;
-  margin: 0;
-
-
-
-  &__container {
-    perspective: 2000px;
-  }
-  &--exit {
-    &.aws-sld--moveLeft, &.aws-sld--moveRight {
-      transform-style: preserve-3d;
-      backface-visibility: hidden;
-    }
-    &.aws-sld--moveLeft {
-      transform-origin: 100% 50%;
-      transform: translate3d(-100%, 0, 0) rotateY(-90deg);
-    }
-    &.aws-sld--moveRight {
-      transform-origin: 0% 50%;
-      transform: translate3d(100%, 0, 0) rotateY(90deg);
-    }
-  }
+.slider-list {
+  max-height: 20em; 
 }
