--- a/Front/src/components/HomePage/homepage.scss
+++ b/Front/src/components/HomePage/homepage.scss
@@ -1,9 +1,19 @@
 .event {
   min-height: 100px;
-
+  width: 100%;
   & p {
     font-size: 1.2em;
     line-height: 2.2em;
     vertical-align: text-bottom;
   }
+}
+
+.center {
+  text-align: center;
+}
+
+.next-event-box {
+  background-color: #ffffff;
+  margin: 15px 0;
+  border-radius: 8px;
 }
