css remaster and theme remaster

--- a/Front/src/components/Contact/contact.scss
+++ b/Front/src/components/Contact/contact.scss
@@ -2,6 +2,13 @@
 
 .contact-form {
   text-align: center;
+  padding : 1em;
+  
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom:1em;
+  }
 }
 
 .contact {
