--- a/Front/src/components/NewsDetail/newsDetails.scss
+++ b/Front/src/components/NewsDetail/newsDetails.scss
@@ -1,20 +1,61 @@
-.newsDetail {
-  max-width: 80%;
-  margin: auto;
-  padding: 25px;
+@import 'src/styles/vars';
 
-  
-  
-  &-content {
-  font-size: 1em;
-  line-height: 1.2em;
-  }
+
+.newsContent {
+  display: flex;
+  padding: 25px; 
+  flex-direction: row;
+  align-items: center;
+
 
 }
-
 .newsHeader {
-  display: flex;
   justify-content: space-between;
   align-items: baseline;
-  max-width: 100%;
+  padding: 1em;
 }
+
+.calendar {
+  //border: 1px solid black;
+  background-color: $color4;
+  text-align: center; 
+  border-radius: 10px;
+  padding: 0.3em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
+  
+}
+.newContentDay{
+background-color: $color1;
+//font-size: 100%;
+font-weight: bold;
+padding: 0.3em;
+border-top-left-radius: 5px;
+border-top-right-radius: 5px;
+}
+
+.newContentNumber{
+  font-size: 2em;
+  font-stretch: extra-condensed;
+  background-color: $color4;
+  font-weight: bold; 
+  }
+
+.newContentMonth{
+ // font-weight: bold;
+  //font-size: 100%;
+  text-transform: uppercase;
+    }
+
+.newContentYear{
+  //font-size: 100%;
+  //font-size: 1.5em;
+      
+   }
+  .flexFont {
+  }
+
+// $color1:#ff732d;
+// $color2:#2ab7ca;
+// $color3:#e6e6ea;
+// $color4:#f4f4f8;
+// $color5:#ffc43d;
