--- a/Front/src/styles/_vars.scss
+++ b/Front/src/styles/_vars.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand&display=swap');
 
 $color1:#ff732d;
 $color2:#2ab7ca;
@@ -7,11 +8,6 @@ $color3:#e6e6ea;
 $color4:#f4f4f8;
 $color5:#ffc43d;
 
-h1 {
-font-size: 2em;
-font-weight: bolder;
-font-family: 'Indie Flower', cursive;
-padding : 1em 0 0.3em 0;
-}
+
 
 
