--- a/Front/src/components/Contact/contact.scss
+++ b/Front/src/components/Contact/contact.scss
@@ -3,6 +3,9 @@
 .contact-form {
   text-align: center;
   padding : 1em;
+  background-color: #ffffff;
+  margin: 15px 0;
+  border-radius: 8px;
   
   h1 {
     text-align: center;
