--- a/Front/src/components/WhoAreWe/who.scss
+++ b/Front/src/components/WhoAreWe/who.scss
@@ -3,7 +3,9 @@
 .who {
   width: 100%;
   padding : 1em;
-  margin: auto;
+  background-color: #ffffff;
+  margin: 15px 0;
+  border-radius: 8px;
  
  h1 {
     text-align: center;
