--- a/Front/src/components/EventDetail/eventDetail.scss
+++ b/Front/src/components/EventDetail/eventDetail.scss
@@ -1,10 +1,14 @@
 .eventDetail {
   display: flex;
   flex-direction: column;
+  background-color: #ffffff;
+  margin: 15px 0;
+  border-radius: 8px;
+  padding: 1em;
+  
  
   h2 {
     padding-bottom: 1em;
   }
-
 }
 
