--- a/Front/src/styles/index.scss
+++ b/Front/src/styles/index.scss
@@ -4,7 +4,7 @@
 body {
   font-family: sans-serif;
   height: 100vh;
-  background-image: url("https://isostatic.ovh/happychilds.jpg"),url("https://isostatic.ovh/happychilds.jpg");
+  background-image: url("https://isostatic.ovh/happychilds.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
