--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -2,8 +2,17 @@
 
 .event {
   margin: 25px 0; 
+}
+ 
+
+.event-calendar {
+  //border: 1px solid black;
+  background-color: $color4;
+  text-align: center; 
+  border-radius: 10px;
+  padding: 0.3em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
+  height: 100%;
   
-  &-cardAction {
-  float: right;
-  }  
+  
 }
