--- a/Front/src/components/NewsDetail/newsDetails.scss
+++ b/Front/src/components/NewsDetail/newsDetails.scss
@@ -1,17 +1,8 @@
 @import 'src/styles/vars';
 
 
-.newsContent {
-  display: flex;
-  padding: 25px; 
-  flex-direction: row;
-  align-items: top;
-  
-
-
-}
-.newsHeader {
-
+.news-content {
+   padding: 25px; 
 }
 
 .calendar {
@@ -22,7 +13,7 @@
   padding: 0.3em;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
   height: 100%;
-  margin: 1em;
+  margin-right: 1em;
   
 }
 .newContentDay{
