--- a/Front/src/components/Includes/nav.scss
+++ b/Front/src/components/Includes/nav.scss
@@ -3,11 +3,14 @@
 
 @media screen and (min-width:480px) {
   .navBar {
-  display: flex;
-  background-color: $color1; 
-  justify-content: flex-end;
-  color: $color4;
-  }
+    display: flex;
+    background-color: $color1; 
+    justify-content: flex-end;
+    color: $color4 !important;
+    }
+    & a {
+      color: $color4 !important;
+      }
 }
 @media screen and (max-width:480px) {
   .navBar {
@@ -21,7 +24,7 @@
   display: flex;
   background-color: $color1; 
   justify-content: flex-end;
-  color: $color4;;
+  color: $color4;
   }
 }
 
