--- a/Front/src/components/Includes/nav.scss
+++ b/Front/src/components/Includes/nav.scss
@@ -6,10 +6,10 @@
     display: flex;
     background-color: $color1; 
     justify-content: flex-end;
-    color: $color4 !important;
+    // color: $color4;
     }
     & a {
-      color: $color4 !important;
+      // color: $color4;
       }
 }
 @media screen and (max-width:480px) {
