--- a/Front/src/components/Includes/nav.scss
+++ b/Front/src/components/Includes/nav.scss
@@ -6,11 +6,8 @@
     display: flex;
     background-color: $color1; 
     justify-content: flex-end;
-    color: $color4 !important;
+    color: $color4;
     }
-    & a {
-      color: $color4 !important;
-      }
 }
 @media screen and (max-width:480px) {
   .navBar {
