News-details done but to be perfected

--- a/Front/src/components/New/new.scss
+++ b/Front/src/components/New/new.scss
@@ -11,8 +11,8 @@
   border-radius: 10px;
   padding: 0.3em;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
-  height: 100%;
-  margin: 20em;
+  width: 100px;
+ 
 }
 .newContent {
   padding-left: 1em;
