Réglage affichage html last news, ajustement du mois sur la date (font-size)

--- a/Front/src/components/New/new.scss
+++ b/Front/src/components/New/new.scss
@@ -34,16 +34,14 @@ border-top-right-radius: 5px;
   }
 
 .newContentMonth{
- // font-weight: bold;
-  //font-size: 100%;
+  font-weight: bold;
+  font-size: 0.8em;
   text-transform: uppercase;
     }
 
 .newContentYear{
-  //font-size: 100%;
-  //font-size: 1.5em;
-    
-   }
+  font-size: 1em;    
+}
  
 
 // $color1:#ff732d;
