--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -12,7 +12,9 @@
   border-radius: 10px;
   padding: 0.3em;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
-  height: 100%;
+  min-width: 100px;
+  max-width: 200px;
+  // height: 100%;
   
 }
 
