--- a/Front/src/components/EventDetail/eventDetail.scss
+++ b/Front/src/components/EventDetail/eventDetail.scss
@@ -1,10 +1,10 @@
-.eventDetail {
-  display: flex;
-  flex-direction: column;
   
- 
+  .EventDetailImage {
+    align-content: center;
+   
+  }
   h2 {
     padding-bottom: 1em;
   }
-}
+
 
