--- a/Front/src/styles/index.scss
+++ b/Front/src/styles/index.scss
@@ -47,3 +47,21 @@ strong {
   max-width: 95%;
   margin: 50px 0;
 }
+
+h1 {
+  font-size: 1.6em;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 1.3em;
+  font-weight: bold;
+  margin: 8px 0;
+}
+
+h3 {
+  font-size: 1.3em;
+  font-weight: bold;
+  margin: 10px 0;
+}
