--- a/Front/src/components/NewsDetail/newsDetails.scss
+++ b/Front/src/components/NewsDetail/newsDetails.scss
@@ -5,6 +5,15 @@
    padding: 25px; 
 }
 
+.newsImage {
+  float: left;
+  top: 20em;
+  width: 40vh;
+  padding : 1em; 
+}
+
+
+
 .calendar {
   //border: 1px solid black;
   background-color: $color4;
