Dynamisation et création du formulaire User & Responsive forms

--- a/Front/src/components/Contact/contact.scss
+++ b/Front/src/components/Contact/contact.scss
@@ -1,28 +1,28 @@
 @import 'src/styles/vars';
 
-.contact-form {
-  text-align: center;
-  padding : 1em;
+// .contact-form {
+//   text-align: center;
+//   padding : 1em;
   
-  h1 {
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom:1em;
-  }
-}
+//   h1 {
+//     text-align: center;
+//     text-transform: uppercase;
+//     margin-bottom:1em;
+//   }
+// }
 
-.contact {
-  display: flex;
-  flex-direction: column;
-  width : 60%;
-  margin: auto;
-  padding : 1em;
+// .contact {
+//   display: flex;
+//   flex-direction: column;
+//   width : 60%;
+//   margin: auto;
+//   padding : 1em;
   
 
-  &-button {
-    display: inline-block;
-    width: 6em;
-    margin: auto;
-  }
+//   &-button {
+//     display: inline-block;
+//     width: 6em;
+//     margin: auto;
+//   }
   
-}
+// }
