--- a/Front/src/components/Event/event.scss
+++ b/Front/src/components/Event/event.scss
@@ -16,3 +16,14 @@
   
 }
 
+.resaEvent {
+  padding: 0.8em;
+  margin: 1em;
+  color: white;
+  background-color: $color1; 
+  font-size: 1em;
+  min-height: 30vh;  
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
+ 
+}
