--- a/Front/src/components/HomePage/homepage.scss
+++ b/Front/src/components/HomePage/homepage.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/vars';
+
 .event {
   min-height: 100px;
 
@@ -17,3 +19,14 @@
   border-radius: 8px;
 }
 
+.homepage-nextevent {
+  font-size: 2em;
+  padding: 0.3em;
+  margin-top: 0.5em;
+  text-decoration: overline $color2;
+  background-color: $color2;
+  color: #ffffff;
+  font-family: 'Raleway', cursive;
+  font-weight: bolder;
+  border-radius: 12px;
+}
