--- a/Front/src/components/User/user.scss
+++ b/Front/src/components/User/user.scss
@@ -1,3 +1,13 @@
 .login-form {
   margin-top: 50px !important;
 }
+
+.signup-form {
+  
+
+  & .MuiFormControl-root {
+    display: inline-block;
+    width: 50%;
+    margin: 0 auto;
+  }
+}
