--- a/Front/src/styles/index.scss
+++ b/Front/src/styles/index.scss
@@ -69,7 +69,10 @@ form {
   }
 
   & .MuiInput-input {
-    min-width: 50vw;
-    max-width: 95%;
+    width: 100%;
   }
+}
+
+.MuiFormControl-root {
+  display: flex !important;
 }
