Réglages CSS admin

--- a/Front/src/components/admin/App/app.scss
+++ b/Front/src/components/admin/App/app.scss
@@ -1,5 +1,8 @@
 #app {
   font-size: 1.2em;
-  text-align: center;
-  margin: 1em;
+  text-align: left;
+  margin: 0;
+}
+.simple-form {
+  text-align: left !important;
 }
