--- a/Front/src/components/Contact/contact.scss
+++ b/Front/src/components/Contact/contact.scss
@@ -11,18 +11,18 @@
 //   }
 // }
 
-// .contact {
-//   display: flex;
-//   flex-direction: column;
-//   width : 60%;
-//   margin: auto;
-//   padding : 1em;
+.contact {
+  display: flex;
+  flex-direction: column;
+  width : 60%;
+  margin: auto;
+  padding : 1em;
   
 
-//   &-button {
-//     display: inline-block;
-//     width: 6em;
-//     margin: auto;
-//   }
+  &-button {
+    display: inline-block;
+    width: 6em;
+    margin: auto;
+  }
   
-// }
+}
