--- a/Front/src/styles/index.scss
+++ b/Front/src/styles/index.scss
@@ -61,15 +61,15 @@ h3 {
 }
 
 form {
-  margin: 0 auto;
-  text-align: center;
+  // margin: 0 auto;
+  text-align: left;
 
-  & .MuiInput-root {
-    margin: 50px 0;
-  }
+  // & .MuiInput-root {
+  //   margin: 50px 0;
+  // }
 
-  & .MuiInput-input {
-    min-width: 50vw;
-    max-width: 95%;
-  }
+  // & .MuiInput-input {
+  //   min-width: 50vw;
+  //   max-width: 95%;
+  // }
 }
